Oppdatering av intro til IO

--- a/basics/ios/intro.tex
+++ b/basics/ios/intro.tex
@@ -12,7 +12,7 @@
     Hva er input og output?
 
     \begin{itemize}
-        \item Kommunikasjon mellom bruker og datamaskin
+        \item Kommunikasjon mellom bruker og kode
     \end{itemize}
 
 \end{frame}
@@ -23,7 +23,7 @@
     Hva er input og output?
 
     \begin{itemize}
-        \item Kommunikasjon mellom bruker og datamaskin
+        \item Kommunikasjon mellom bruker og kode
         \item Kommunikasjon mellom datamaskin og kode
     \end{itemize}
 
@@ -35,7 +35,7 @@
     Hva er input og output?
 
     \begin{itemize}
-        \item Kommunikasjon mellom bruker og datamaskin: \textit{input} and \textit{print}
+        \item Kommunikasjon mellom bruker og kode: \textit{input} and \textit{print}
         \item Kommunikasjon mellom datamaskin og kode: \textit{open}
     \end{itemize}
 
