--- a/main.tex
+++ b/main.tex
@@ -29,3 +29,15 @@
 \input{basics/basic.tex}
 
 \end{document}
+
+% Variabler, datatyper, bruk av funksjoner, input/output (2)
+% Betingelser og logiske uttrykk (if) (3)
+% Løkker (for/while) (4)
+% Enkle funksjoner uten returverdi (5)
+% Funksjoner med retur og Moduler (5)
+% Lister og tupler (7)
+% Lister/tupler og Mer om strenger (7 og 8)
+% Filer og Unntak (Exception) (6)
+% Dictionaries og mengder (9)
+% Plotting og visualisering av data
+% Repetisjon
