--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,14 @@
 \titlepage
 \end{frame} 
 
-\input{basics/basic.tex}
+\input{assignments/assignment.tex}
+\input{arithmetics/arithmetic.tex}
+\input{datatypes/dataype.tex}
+\input{ios/io_basics.tex}
+
+
+\input{ios/io_advanced.tex}
+
 
 \end{document}
 
