--- a/functions/intro.tex
+++ b/functions/intro.tex
@@ -10,7 +10,11 @@
 \begin{frame}
     \frametitle{Funksjoner}
 
-    Svært ofte ønsker man å gjenbruke deler av koden man skriver. Det å printe / skrive til skjermen er egentlig en veldig kompleks prosess, men den har blitt \textit{abstrahert bort}. Abstraksjoner er veldig viktige for å løse oppgaver, både til eksamen og senere. 
+    Svært ofte ønsker man å gjenbruke deler av koden man skriver. Det å printe / skrive til skjermen er egentlig en veldig kompleks prosess, men den har blitt \textit{abstrahert bort}. 
+    
+    Abstraksjoner er veldig viktige for å løse oppgaver, både til eksamen og senere. 
+
+    Dette begrepet kommer vi tilbake til når vi begynner å se på eksamensoppgaver. 
 
 \end{frame}
 
