--- a/iterables/iterables_advanced.tex
+++ b/iterables/iterables_advanced.tex
@@ -1,3 +1,10 @@
 
 \input{iterables/intro.tex}
 \input{iterables/dictionaries.tex}
+
+\begin{frame}
+    \frametitle{Sets}
+
+    Det finnes også set, som ligner veldig på lister. Disse kan kun ha unike verdier, som er egentlig eneste grunn til å bruke disse. Problemer man kan løse med set kan også løses med lister, men man kan få kortere (men muligens mindre leslige) løsninger. 
+
+\end{frame}
