--- a/iterables/list.tex
+++ b/iterables/list.tex
@@ -49,8 +49,8 @@ liste = liste + ["alle", "sammen"]
         Metode & Eksempel               &  & Metode  & Eksempel        \\ \hline
         append & liste.append("hei")    &  & reverse & liste.reverse() \\ \hline
         insert & liste.insert(2, "hei") &  & sort    & liste.sort()    \\ \hline
-        remove & liste.remove("hei")    &  & copy    & liste.copy()    \\ \hline
-        pop    & liste.pop(1)           &  & clear   & kopi = liste.clear()   \\ \hline
+        remove & liste.remove("hei")    &  & copy    & kopi = liste.copy()    \\ \hline
+        pop    & liste.pop(1)           &  & clear   & liste.clear()   \\ \hline
         count  & liste.count("hei")     &  &         &                 \\ \hline
         \end{tabular}
     \end{table}
