--- a/main.tex
+++ b/main.tex
@@ -15,10 +15,10 @@
 
 
 \title[Kræsjkurs]{Kræsjkurs} 
-\subtitle{aaa} 
-\author[O. Nordmann]{Ola Nordmann} 
-\institute[NTNU]{, NTNU} 
-\date{1 January 1970} 
+\subtitle{Python} 
+\author[M. E. Gerhardsen]{Martin Eek Gerhardsen} 
+\institute[NTNU]{Institutt for Teknisk Kybernetikk, NTNU} 
+\date{2. desember 2019} 
 
 \begin{document}
 
@@ -26,13 +26,39 @@
 \titlepage
 \end{frame} 
 
-\input{assignments/assignment.tex}
-\input{arithmetics/arithmetic.tex}
-\input{datatypes/dataype.tex}
-\input{ios/io_basics.tex}
+\begin{frame}
+    \frametitle{Plan}
 
+    \begin{enumerate}
+        \item Tilordningsoperator
+        \item Aritmetiske operatorer
+        \item Sammenligningsoperatorer
+        \item Datatyper
+        \item Input og output fra bruker
+        \item Funksjoner 
+        \item Lister og tupler
+        \item Løkker 
+        \item Slicing 
+        \item Dictionaries og mengder 
+        \item Input og output fra filer 
+        \item Unntaksbehandling
+        \item Eksamensoppgaver
+    \end{enumerate}
 
-\input{ios/io_advanced.tex}
+\end{frame}
+
+% \input{assignments/assignment.tex}
+% \input{arithmetics/arithmetic.tex}
+% \input{comparison/comparison.tex}
+% \input{datatypes/dataype.tex}
+% \input{ios/io_basics.tex}
+% \input{functions/function.tex}
+% \input{iterables/iterables_basics.tex}
+% \input{loops/loop.tex}
+% \input{iterables/iterables_advanced.tex}
+% \input{ios/io_advanced.tex}
+% \input{exceptions/exception.tex}
+\input{exams/exam.tex}
 
 
 \end{document}
