Some more exam tasks

--- a/main.tex
+++ b/main.tex
@@ -29,6 +29,17 @@
 \begin{frame}
     \frametitle{Plan}
 
+    \begin{itemize}
+        \item Grunnleggende
+        \item Visualisering
+        \item Gjennomgang av gamle eksamensoppgaver 
+    \end{itemize}
+
+\end{frame}
+
+\begin{frame}
+    \frametitle{Plan}
+
     \begin{enumerate}
         \item Tilordningsoperator
         \item Aritmetiske operatorer
@@ -47,17 +58,17 @@
 
 \end{frame}
 
-% \input{assignments/assignment.tex}
-% \input{arithmetics/arithmetic.tex}
-% \input{comparison/comparison.tex}
-% \input{datatypes/dataype.tex}
-% \input{ios/io_basics.tex}
-% \input{functions/function.tex}
-% \input{iterables/iterables_basics.tex}
-% \input{loops/loop.tex}
-% \input{iterables/iterables_advanced.tex}
-% \input{ios/io_advanced.tex}
-% \input{exceptions/exception.tex}
+\input{assignments/assignment.tex}
+\input{arithmetics/arithmetic.tex}
+\input{comparison/comparison.tex}
+\input{datatypes/dataype.tex}
+\input{ios/io_basics.tex}
+\input{functions/function.tex}
+\input{iterables/iterables_basics.tex}
+\input{loops/loop.tex}
+\input{iterables/iterables_advanced.tex}
+\input{ios/io_advanced.tex}
+\input{exceptions/exception.tex}
 \input{exams/exam.tex}
 
 
